--- a/proge.html
+++ b/proge.html
@@ -117,7 +117,7 @@
                 <!-- Proje 3 -->
                 <div class="project-card" data-category="ecommerce">
                     <div class="project-image">
-                        <img src="/image/emirhantazegül.png" alt="Emirhan Tazegül Web Sitesi" loading="lazy">
+                        <img src="/image/emirhantazegül.jpg" alt="Emirhan Tazegül Web Sitesi" loading="lazy">
                         <div class="project-overlay">
                             <a href="https://www.xn--emirhantazegl-7ob.site/" class="view-project" target="_blank" rel="noopener">Siteyi Görüntüle</a>
                         </div>
