--- a/design.html
+++ b/design.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="tasarım, 3D modelleme, animasyon, grafik tasarım, yaratıcı süreçler">
     <title>Zift Studio - Tasarımlar</title>
     <link rel="stylesheet" href="create.css">
+    <link rel="stylesheet" href="designgallery.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 
