--- a/design.html
+++ b/design.html
@@ -75,6 +75,98 @@
             <div class="gallery-item logo">
                 <img src="images/logo1.jpg" alt="Modern Logo Tasarımı">
                 <h3>Modern Logo</h3>
+                <ul>
+                    <li>Minimalist çizgiler</li>
+                    <li>Kurumsal kimlik için ideal</li>
+                    <li>Yüksek çözünürlük</li>
+                </ul>
+                <a href="mailto:muhammedalikitir.tr@gmail.com?subject=Modern Logo Satın Alma&body=Merhaba, Modern Logo tasarımını satın almak istiyorum." class="buy-btn">Satın Al</a>
+            </div>
+
+            <div class="gallery-item logo">
+                <img src="images/logo2.jpg" alt="Yaratıcı Logo">
+                <h3>Yaratıcı Logo</h3>
+                <ul>
+                    <li>Dikkat çekici renkler</li>
+                    <li>Güçlü tipografi</li>
+                    <li>Marka kimliği için uygun</li>
+                </ul>
+                <a href="mailto:muhammedalikitir.tr@gmail.com?subject=Yaratıcı Logo Satın Alma&body=Merhaba, Yaratıcı Logo tasarımını satın almak istiyorum." class="buy-btn">Satın Al</a>
+            </div>
+
+            <!-- 3D Nesne Örnekleri -->
+            <div class="gallery-item object">
+                <img src="images/object1.jpg" alt="3D Araba Modeli">
+                <h3>3D Araba Modeli</h3>
+                <ul>
+                    <li>Gerçekçi detaylar</li>
+                    <li>Render için hazır</li>
+                    <li>3 farklı formatta indirilebilir</li>
+                </ul>
+                <a href="mailto:muhammedalikitir.tr@gmail.com?subject=3D Araba Modeli Satın Alma&body=Merhaba, 3D Araba Modeli tasarımını satın almak istiyorum." class="buy-btn">Satın Al</a>
+            </div>
+
+            <div class="gallery-item object">
+                <img src="images/object2.jpg" alt="3D Mobilya Tasarımı">
+                <h3>3D Mobilya</h3>
+                <ul>
+                    <li>Modern mobilya tasarımı</li>
+                    <li>İç mekan projelerine uygun</li>
+                    <li>Çeşitli renk seçenekleri</li>
+                </ul>
+                <a href="mailto:muhammedalikitir.tr@gmail.com?subject=3D Mobilya Tasarımı Satın Alma&body=Merhaba, 3D Mobilya tasarımını satın almak istiyorum." class="buy-btn">Satın Al</a>
+            </div>
+
+            <!-- Katalog Örnekleri -->
+            <div class="gallery-item catalog">
+                <img src="images/catalog1.jpg" alt="Ürün Kataloğu">
+                <h3>Ürün Kataloğu</h3>
+                <ul>
+                    <li>Profesyonel tasarım</li>
+                    <li>Düzenli ürün tanıtımı</li>
+                    <li>PDF formatında teslim</li>
+                </ul>
+                <a href="mailto:muhammedalikitir.tr@gmail.com?subject=Ürün Kataloğu Satın Alma&body=Merhaba, Ürün Kataloğu tasarımını satın almak istiyorum." class="buy-btn">Satın Al</a>
+            </div>
+
+            <div class="gallery-item catalog">
+                <img src="images/catalog2.jpg" alt="Kurumsal Katalog">
+                <h3>Kurumsal Katalog</h3>
+                <ul>
+                    <li>Şirket tanıtımı için özel</li>
+                    <li>Modern ve estetik</li>
+                    <li>Çok sayfalı tasarım</li>
+                </ul>
+                <a href="mailto:muhammedalikitir.tr@gmail.com?subject=Kurumsal Katalog Satın Alma&body=Merhaba, Kurumsal Katalog tasarımını satın almak istiyorum." class="buy-btn">Satın Al</a>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+
+
+    <!-- Design Gallery -->
+<section class="design-gallery">
+    <div class="container">
+        <h2 class="section-title">Çalışmalarımız</h2>
+        <p class="section-subtitle">3D Nesneler, Logolar ve Katalog Tasarımlarımız</p>
+
+        <!-- Filtre Butonları -->
+        <div class="filter-controls">
+            <button class="filter-btn active" data-filter="all">Tümü</button>
+            <button class="filter-btn" data-filter="logo">Logolar</button>
+            <button class="filter-btn" data-filter="object">3D Nesneler</button>
+            <button class="filter-btn" data-filter="catalog">Kataloglar</button>
+        </div>
+
+        <!-- Galeri Grid -->
+        <div class="gallery-grid">
+
+            <!-- Logo Örnekleri -->
+            <div class="gallery-item logo">
+                <img src="images/logo1.jpg" alt="Modern Logo Tasarımı">
+                <h3>Modern Logo</h3>
                 <p>Minimalist çizgilerle kurumsal bir kimlik.</p>
             </div>
 
