--- a/design.html
+++ b/design.html
@@ -73,7 +73,7 @@
 
             <!-- Logo Örnekleri -->
             <div class="gallery-item logo">
-                <img src="images/logo1.jpg" alt="Modern Logo Tasarımı">
+                <img src="image/logo1.jpg" alt="Modern Logo Tasarımı">
                 <h3>Modern Logo</h3>
                 <ul>
                     <li>Minimalist çizgiler</li>
@@ -84,7 +84,7 @@
             </div>
 
             <div class="gallery-item logo">
-                <img src="images/logo2.jpg" alt="Yaratıcı Logo">
+                <img src="image/logo2.jpg" alt="Yaratıcı Logo">
                 <h3>Yaratıcı Logo</h3>
                 <ul>
                     <li>Dikkat çekici renkler</li>
@@ -96,7 +96,7 @@
 
             <!-- 3D Nesne Örnekleri -->
             <div class="gallery-item object">
-                <img src="images/object1.jpg" alt="3D Araba Modeli">
+                <img src="image/object1.jpg" alt="3D Araba Modeli">
                 <h3>3D Araba Modeli</h3>
                 <ul>
                     <li>Gerçekçi detaylar</li>
@@ -107,7 +107,7 @@
             </div>
 
             <div class="gallery-item object">
-                <img src="images/object2.jpg" alt="3D Mobilya Tasarımı">
+                <img src="image/object2.jpg" alt="3D Mobilya Tasarımı">
                 <h3>3D Mobilya</h3>
                 <ul>
                     <li>Modern mobilya tasarımı</li>
@@ -119,7 +119,7 @@
 
             <!-- Katalog Örnekleri -->
             <div class="gallery-item catalog">
-                <img src="images/catalog1.jpg" alt="Ürün Kataloğu">
+                <img src="image/catalog1.jpg" alt="Ürün Kataloğu">
                 <h3>Ürün Kataloğu</h3>
                 <ul>
                     <li>Profesyonel tasarım</li>
@@ -130,7 +130,7 @@
             </div>
 
             <div class="gallery-item catalog">
-                <img src="images/catalog2.jpg" alt="Kurumsal Katalog">
+                <img src="image/catalog2.jpg" alt="Kurumsal Katalog">
                 <h3>Kurumsal Katalog</h3>
                 <ul>
                     <li>Şirket tanıtımı için özel</li>
@@ -165,39 +165,39 @@
 
             <!-- Logo Örnekleri -->
             <div class="gallery-item logo">
-                <img src="images/logo1.jpg" alt="Modern Logo Tasarımı">
+                <img src="image/logo1.jpg" alt="Modern Logo Tasarımı">
                 <h3>Modern Logo</h3>
                 <p>Minimalist çizgilerle kurumsal bir kimlik.</p>
             </div>
 
             <div class="gallery-item logo">
-                <img src="images/logo2.jpg" alt="Yaratıcı Logo">
+                <img src="image/logo2.jpg" alt="Yaratıcı Logo">
                 <h3>Yaratıcı Logo</h3>
                 <p>Dikkat çekici renkler ve güçlü tipografi.</p>
             </div>
 
             <!-- 3D Nesne Örnekleri -->
             <div class="gallery-item object">
-                <img src="images/object1.jpg" alt="3D Araba Modeli">
+                <img src="image/object1.jpg" alt="3D Araba Modeli">
                 <h3>3D Araba Modeli</h3>
                 <p>Gerçekçi detaylarla hazırlanmış otomobil modeli.</p>
             </div>
 
             <div class="gallery-item object">
-                <img src="images/object2.jpg" alt="3D Mobilya Tasarımı">
+                <img src="image/object2.jpg" alt="3D Mobilya Tasarımı">
                 <h3>3D Mobilya</h3>
                 <p>İç mekan projelerine uygun mobilya tasarımı.</p>
             </div>
 
             <!-- Katalog Örnekleri -->
             <div class="gallery-item catalog">
-                <img src="images/catalog1.jpg" alt="Ürün Kataloğu">
+                <img src="image/catalog1.jpg" alt="Ürün Kataloğu">
                 <h3>Ürün Kataloğu</h3>
                 <p>Profesyonel ve düzenli ürün tanıtım kataloğu.</p>
             </div>
 
             <div class="gallery-item catalog">
-                <img src="images/catalog2.jpg" alt="Kurumsal Katalog">
+                <img src="image/catalog2.jpg" alt="Kurumsal Katalog">
                 <h3>Kurumsal Katalog</h3>
                 <p>Şirket tanıtımı için kurumsal tasarım kataloğu.</p>
             </div>
