--- a/create.html
+++ b/create.html
@@ -22,7 +22,7 @@
                 <li><a href="index.html#home">Ana Sayfa</a></li>
                 <li><a href="developer.html">Developer</a></li>
                 <li><a href="create.html" class="active">Create</a></li>
-                <li><a href="design.html">Tasarımlar</a></li>
+                <li><a href="design1.html">Tasarımlar</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="index.html#contact">İletişim</a></li>
             </ul>
