--- a/design1.html
+++ b/design1.html
@@ -141,6 +141,72 @@
         </div>
     </section>
 
+
+
+
+
+<!-- === Örnek Ürünler === -->
+<div class="design-gallery">
+    <div class="container">
+        <h2 class="section-title">Çalışmalarımız</h2>
+        <p class="section-subtitle">3D Nesneler, Logolar ve Katalog Tasarımlarımız</p>
+
+        <!-- Filtre Butonları -->
+        <div class="filter-controls">
+            <button class="filter-btn active" data-filter="all">Tümü</button>
+            <button class="filter-btn" data-filter="logo">Logolar</button>
+            <button class="filter-btn" data-filter="3d">3D Tasarımlar</button>
+            <button class="filter-btn" data-filter="katalog">Kataloglar</button>
+        </div>
+
+        <!-- Ürünler -->
+        <div class="gallery">
+            <!-- Logo Örneği -->
+            <div class="gallery-item logo">
+                <img src="https://via.placeholder.com/300x200?text=Logo+1" alt="Logo 1">
+                <h3>Minimal Logo</h3>
+                <p>Profesyonel ve sade logo tasarımı</p>
+                <span class="price">₺250</span>
+                <button class="buy-btn" data-product="Minimal Logo" data-price="₺250">Satın Al</button>
+            </div>
+
+            <!-- 3D Tasarım Örneği -->
+            <div class="gallery-item 3d">
+                <img src="https://via.placeholder.com/300x200?text=3D+Model" alt="3D Model">
+                <h3>3D Araba Modeli</h3>
+                <p>Yüksek detaylı 3D araba modellemesi</p>
+                <span class="price">₺800</span>
+                <button class="buy-btn" data-product="3D Araba Modeli" data-price="₺800">Satın Al</button>
+            </div>
+
+            <!-- Katalog Örneği -->
+            <div class="gallery-item katalog">
+                <img src="https://via.placeholder.com/300x200?text=Katalog" alt="Katalog">
+                <h3>Ürün Kataloğu</h3>
+                <p>Modern ve estetik katalog tasarımı</p>
+                <span class="price">₺450</span>
+                <button class="buy-btn" data-product="Ürün Kataloğu" data-price="₺450">Satın Al</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
