--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <li><a href="developer.html">Developer</a></li>
                 <li><a href="create.html">Create</a></li>
                 <li><a href="shop.html">Shop</a></li>
+                <li><a href="atlas.html">Tarih Atlası</a></li>
                 <li><a href="#services" data-section="services">Hizmetlerimiz</a></li>
                 <li><a href="#contact" data-section="contact">İletişim</a></li>
             </ul>
