--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="atlas.html">Atlas</a></li>
                 <li><a href="inde.html">Tarih Atlası</a></li>
+                <li><a href="clock.html">Saat</a></li>
                 <li><a href="#services" data-section="services">Hizmetlerimiz</a></li>
                 <li><a href="#contact" data-section="contact">İletişim</a></li>
             </ul>
