--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 <li><a href="#home" data-section="home">Ana Sayfa</a></li>
                 <li><a href="developer.html">Developer</a></li>
                 <li><a href="create.html">Create</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="atlas.html">Atlas</a></li>
-                <li><a href="inde.html">Tarih Atlası</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a 
+href="inde.html">Tarih Atlası</a></li>
                 <li><a href="calori.html">Kalori Hesaplama</a></li>
                 <li><a href="clock.html">Saat</a></li>
                 <li><a href="#services" data-section="services">Hizmetlerimiz</a></li>
